--- a/references.bib
+++ b/references.bib
@@ -704,3 +704,17 @@
 	year = {2016},
 	file = {Full Text:/Users/neilweidinger/Zotero/storage/YWEADG4L/Ristov et al. - 2016 - Superlinear speedup in HPC systems Why and when.pdf:application/pdf},
 }
+    
+@misc{-funswitch-loops_abstracting_2022,
+	type = {Reddit {Comment}},
+	title = {Abstracting {Runtimes}},
+	url = {www.reddit.com/r/rust/comments/sjcf6r/sqlx_proposal_remove_runtime_features_and/hve7pdp/},
+	urldate = {2022-04-07},
+	journal = {r/rust},
+	author = {-funswitch-loops},
+	month = feb,
+	year = {2022},
+	note = {Post URL: www.reddit.com/r/rust/comments/sjcf6r/sqlx\_proposal\_remove\_runtime\_features\_and/},
+	file = {Reddit Comment Snapshot:/Users/neilweidinger/Zotero/storage/9VMVMVL5/hve7pdp.html:text/html},
+}
+
